--- a/SchulCloud.Server/Components/Routes.razor
+++ b/SchulCloud.Server/Components/Routes.razor
@@ -1,6 +1,33 @@
-﻿<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
-    <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="routeData" Selector="h1" />
-    </Found>
-</Router>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.Extensions.Options;
+@using SchulCloud.Server.Components.Pages
+@using SchulCloud.Server.Options;
+
+<CascadingAuthenticationState>
+    <Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
+        <Found Context="routeData">
+            <AuthorizeView>
+                <Authorized>
+                    <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layouts.MainLayout)" />
+                </Authorized>
+                <NotAuthorized>
+                    <RouteView RouteData="routeData" DefaultLayout="typeof(Layouts.AnonLayout)" />
+                </NotAuthorized>
+            </AuthorizeView>
+        </Found>
+        <NotFound>
+            <AuthorizeView>
+                <Authorized>
+                    <LayoutView Layout="typeof(Layouts.MainLayout)">
+                        <NotFound />
+                    </LayoutView>
+                </Authorized>
+                <NotAuthorized>
+                    <LayoutView Layout="typeof(Layouts.AnonLayout)">
+                        <NotFound />
+                    </LayoutView>
+                </NotAuthorized>
+            </AuthorizeView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
