--- a/SchulCloud.Server/Components/Pages/NotFound.razor
+++ b/SchulCloud.Server/Components/Pages/NotFound.razor
@@ -1,16 +1,16 @@
-﻿@using SchulCloud.Server.Utils.Interfaces
+﻿@using Microsoft.AspNetCore.Authorization
+@using SchulCloud.Server.Utils.Interfaces
 
 @page "/error/404"
 @rendermode InteractiveServer
 
+@attribute [AllowAnonymous]
+
 @inject IRequestState _state
+
+<SchulCloudPageTitle Title="Not Found" />
 
 <h3>Error: 404</h3>
 
 @code {
-    protected override void OnInitialized()
-    {
-        _state["pageTitle"] = "404";
-        base.OnInitialized();
-    }
 }
