--- a/SchulCloud.Server/Components/App.razor
+++ b/SchulCloud.Server/Components/App.razor
@@ -1,20 +1,19 @@
 ﻿<!DOCTYPE html>
-<html lang="@Thread.CurrentThread.CurrentUICulture">
+<html lang="@Thread.CurrentThread.CurrentUICulture" class="h-100">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="InteractiveServer" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-
 </head>
 
-<body>
-    <Routes @rendermode="new InteractiveServerRenderMode(false)" />     @* prerender have to be disabled to prevent color theme bugs. *@
+<body class="h-100">
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />     @* prerender have to be disabled to prevent color theme bugs. *@
     <script src="/_framework/blazor.web.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/static/_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
