--- a/SchulCloud.Server/Components/Pages/Auth/SignIn.razor
+++ b/SchulCloud.Server/Components/Pages/Auth/SignIn.razor
@@ -1,10 +1,16 @@
-﻿@using Microsoft.AspNetCore.Authorization
+﻿@using Humanizer
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.DataProtection
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.Extensions.Localization
 @using SchulCloud.Database.Models
+@using SchulCloud.Server.Enums
 @using SchulCloud.Server.Models
 @using SchulCloud.Server.Utils.Interfaces
+@using System.Security.Claims
+
+@implements IDisposable
 
 @page "/auth/signIn"
 @rendermode InteractiveServer
@@ -15,20 +21,34 @@
 @inject IStringLocalizer<SignIn> _localizer
 @inject IRequestState _state
 @inject SignInManager<User> _signInManager
+@inject UserManager<User> _userManager
 @inject NavigationManager _navigationManager
+@inject PersistentComponentState _componentState;
 
 <SchulCloudPageTitle Title="@_localizer["title"]" />
 
 <HeadContent>
     <style>
-        div.input-group.has-validation {
-            margin-top: -1px;
-        }
         input.is-invalid {
             background-image: none !important;
         }
-        input.passwordInput.is-invalid {
+
+        div.input-group.pwd-group {
+            margin-top: -1px;
+        }
+
+        input[name="@($"{nameof(Model)}.{nameof(Model.User)}")"].is-invalid {
+            border-bottom-color: var(--bs-border-color) !important;
+        }
+
+        input[name="@($"{nameof(Model)}.{nameof(Model.Password)}")"].is-invalid {
             border-top-color: var(--bs-border-color) !important;
+            border-right-color: var(--bs-border-color) !important;
+        }
+
+        .pwd-group span.is-invalid {
+            border-right-color: var(--bs-form-invalid-border-color) !important;
+            border-bottom-color: var(--bs-form-invalid-border-color) !important;
         }
     </style>
 </HeadContent>
@@ -44,84 +64,145 @@
     <div class="row">
         <div class="col" />
         <div class="col-6">
-            <EditForm FormName="signIn" Model="Model" OnSubmit="SignInAsync">
-                <div class="input-group">
-                    <span class="input-group-text rounded-bottom-0 p-0">
-                        <Button Class="d-flex align-items-center" @onclick="ToggleUserSelection_Click">
-                            @{
-                                string iconName = Model.IsEmailAddress ? "mail" : "alternate_email";
-                            }
-                            <FontsIcon Name="@iconName" />
-                        </Button>
-                    </span>
+            <form @formname="signIn" method="post" action="@_navigationManager.Uri">
+                <input type="hidden" name="_handler" value="signIn" />     @* I have to place this hidden field by manual because in interactive SSR Blazor doesn't place it by its own. *@
+                <AntiforgeryToken />
 
-                    <div class="form-floating@(IsInputInvalid())">
-                        @{
-                            string userInputName = Model.IsEmailAddress ? "email" : "text";
-                            string localizerName = Model.IsEmailAddress ? "formEmailPlaceholder" : "formUsernamePlaceholder";
-                            string inputPlaceholder = Model.IsEmailAddress ? "person@example.com" : "example Person";
-                        }
-                        <input type="@userInputName" class="form-control rounded-bottom-0@(IsInputInvalid())" id="floatingUsername" @bind="Model.User" @bind:after="Input_Changed" placeholder="@inputPlaceholder" required />
-                        <label for="floatingUsername">@_localizer[localizerName]</label>
+                <div class="input-group">
+                    <div class="form-floating@(IsInvalid())">
+                        <input type="text" name="@($"{nameof(Model)}.{nameof(Model.User)}")" class="form-control rounded-bottom-0@(IsInvalid())" id="floatingUsername" @bind="Model.User" @bind:after="Input_Changed" placeholder required />
+                        <label for="floatingUsername">@_localizer["formUserPlaceholder"]</label>
                     </div>
                 </div>
 
-                <div class="input-group has-validation">
-                    <span class="input-group-text rounded-top-0 p-0">
+                <div class="input-group pwd-group has-validation">
+                    <div class="form-floating@(IsInvalid())">
+                        @{
+                            string inputType = _passwordVisible ? "text" : "password";
+                        }
+                        <input type="@inputType" name="@($"{nameof(Model)}.{nameof(Model.Password)}")" class="form-control rounded-top-0@(IsInvalid())" id="floatingPassword" @bind="Model.Password" @bind:after="Input_Changed" placeholder autocomplete="off" required />
+                        <label for="floatingPassword">@_localizer["formPasswordPlaceholder"]</label>
+                    </div>
+
+                    <span class="input-group-text rounded-top-0 p-0@(IsInvalid())">
                         <Button Class="d-flex align-items-center" @onclick="PasswordVisible_Click">
                             @{
                                 string iconName = _passwordVisible ? "visibility" : "visibility_off";
                             }
                             <FontsIcon Name="@iconName" />
                         </Button>
+                    
                     </span>
-
-                    <div class="form-floating@(IsInputInvalid())">
-                        @{
-                            string inputType = _passwordVisible ? "text" : "password";
-                        }
-                        <input type="@inputType" class="passwordInput form-control rounded-top-0@(IsInputInvalid())" id="floatingPassword" @bind="Model.Password" @bind:after="Input_Changed" placeholder="password" autocomplete="off" required />
-                        <label for="floatingPassword">@_localizer["formPasswordPlaceholder"]</label>
-                    </div>
-
-                    <div class="invalid-feedback">@_localizer["form_InvalidData"]</div>
+                    <div class="invalid-feedback">@_errorMessage</div>
                 </div>
 
                 <div class="form-check my-3">
-                    <InputCheckbox class="form-check-input" @bind-Value="Model.RememberMe" id="rememberMe" />
+                    <InputCheckbox name="@($"{nameof(Model)}.{nameof(Model.RememberMe)}")" class="form-check-input" @bind-Value="Model.RememberMe" id="rememberMe" />
                     <label class="form-check-label" for="rememberMe">@_localizer["formPersistent"]</label>
                 </div>
 
                 <Button Class="w-100" Color="ButtonColor.Primary" Type="ButtonType.Submit">@_localizer["formSubmit"]</Button>
-            </EditForm>
+            </form>
         </div>
         <div class="col" />
     </div>
 </div>
 
 @code {
-    private bool _invalidSubmit = false;
-
     private bool _passwordVisible = false;
+
+    private string? _errorMessage;
+
+    private PersistingComponentStateSubscription? _persistingSubscription;
+
+    [CascadingParameter]
+    private HttpContext? HttpContext { get; set; }
+
+    [CascadingParameter]
+    private Task<AuthenticationState> AuthenticationState { get; set; } = default!;
 
     [SupplyParameterFromQuery(Name = "returnUrl")]
     public string? ReturnUrl { get; set; }
 
-    [SupplyParameterFromForm(FormName = "signIn")]
+    [SupplyParameterFromForm]
     public SignInModel Model { get; set; } = new();
+
+    protected override async Task OnInitializedAsync()
+    {
+        // Make sure that every auth cookie is cleaned up if present.
+        AuthenticationState state = await AuthenticationState.ConfigureAwait(false);
+        if (_signInManager.IsSignedIn(state.User))
+        {
+            if (HttpContext is null)
+            {
+                _navigationManager.Refresh(forceReload: true);
+                return;
+            }
+
+            await _signInManager.SignOutAsync().ConfigureAwait(false);
+        }
+
+        string? method = HttpContext?.Request.Method;
+        if (HttpContext is not null && HttpMethods.IsPost(method!))
+        {
+            await SignInAsync().ConfigureAwait(false);
+
+            _persistingSubscription = _componentState.RegisterOnPersisting(() =>
+            {
+                _componentState.PersistAsJson(nameof(Model), Model);
+                _componentState.PersistAsJson(nameof(_errorMessage), _errorMessage);
+
+                return Task.CompletedTask;
+            });
+        }
+        else
+        {
+            if (_componentState.TryTakeFromJson(nameof(Model), out SignInModel? persistingModel))
+            {
+                Model = persistingModel!;
+            }
+            _componentState.TryTakeFromJson(nameof(_errorMessage), out _errorMessage);
+        }
+    }
 
     private async Task SignInAsync()
     {
+        User? user = await _userManager.FindByEmailAsync(Model.User).ConfigureAwait(false);
+        user ??= await _userManager.FindByNameAsync(Model.User).ConfigureAwait(false);
+
+        if (user is null)
+        {
+            _errorMessage = _localizer["signIn_" + SignInResult.Failed];
+            return;
+        }
+
+        SignInResult result = await _signInManager.PasswordSignInAsync(user, Model.Password, Model.RememberMe, lockoutOnFailure: true).ConfigureAwait(false);
+
+        switch (result)
+        {
+            case { Succeeded: true }:
+                Uri returnUri = _navigationManager.ToAbsoluteUri(ReturnUrl);
+                _navigationManager.NavigateTo(returnUri.PathAndQuery);     // prevent a redirect to another domain by using only the path and query part.
+                break;
+            case { RequiresTwoFactor: true }:
+                throw new NotImplementedException("Mfa is currently not implemented.");
+                break;
+            case { IsLockedOut: true }:
+                DateTimeOffset lockOutEnd = (await _userManager.GetLockoutEndDateAsync(user).ConfigureAwait(false)).Value;
+
+                _errorMessage = lockOutEnd < DateTimeOffset.MaxValue     // MaxValue means that the user is locked without an end. It has to unlocked manually.
+                    ? _localizer["signIn_LockedOut", lockOutEnd.Humanize()]
+                    : _localizer["signIn_LockedOut_NotSpecified"];
+                break;
+            default:
+                _errorMessage = _localizer["signIn_" + result];
+                break;
+        }
     }
 
     private void Input_Changed()
     {
-        _invalidSubmit = false;
-    }
-
-    private void ToggleUserSelection_Click()
-    {
-        Model.IsEmailAddress = !Model.IsEmailAddress;
+        _errorMessage = null;
     }
 
     private void PasswordVisible_Click()
@@ -129,12 +210,17 @@
         _passwordVisible = !_passwordVisible;
     }
 
-    private string IsInputInvalid()
+    private string IsInvalid()
     {
-        if (_invalidSubmit)
+        if (_errorMessage is not null)
         {
             return " is-invalid";
         }
         return string.Empty;
+    }
+
+    void IDisposable.Dispose()
+    {
+        _persistingSubscription?.Dispose();
     }
 }
