--- a/SchulCloud.Server/Components/Pages/Dashboard.razor
+++ b/SchulCloud.Server/Components/Pages/Dashboard.razor
@@ -1,9 +1,14 @@
 ﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.Extensions.Localization
 
 @page "/"
 @rendermode InteractiveServer
 
 @attribute [Authorize]
+
+@inject IStringLocalizer<Dashboard> _localizer
+
+<SchulCloudPageTitle Title="@_localizer["title"]" />
 
 @code {
 
