--- a/SchulCloud.Server/Components/Layouts/AnonLayout.razor
+++ b/SchulCloud.Server/Components/Layouts/AnonLayout.razor
@@ -1,4 +1,5 @@
 ﻿@using Blazored.LocalStorage
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Sections
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using Microsoft.AspNetCore.Localization
@@ -11,6 +12,8 @@
 @using System.Collections.Immutable
 
 @inherits LayoutComponentBase
+
+@attribute [AllowAnonymous]
 
 @inject IStringLocalizer<AnonLayout> _localizer
 @inject ILocalStorageService _browserStorage
