--- a/SchulCloud.Server/Components/App.razor
+++ b/SchulCloud.Server/Components/App.razor
@@ -17,6 +17,8 @@
 
 <body class="h-100">
     <Routes @rendermode="InteractiveServer" />
+    <Toasts Class="p-3" Delay="4000" @rendermode="InteractiveServer" />
+
     <script src="/_framework/blazor.web.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/static/_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
